// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getSections() should return an array 1`] = `
[
  {
    "components": [],
    "content": {
      "__rsgDefault": true,
      "__rsgImport": "rsg-examples:~/test/components/Button/Readme.md",
    },
    "exampleMode": "collapse",
    "href": undefined,
    "name": "Readme",
    "sectionDepth": 0,
    "sections": [],
    "slug": "section-readme-1",
    "usageMode": "collapse",
  },
  {
    "components": [
      {
        "filepath": "components/Annotation/Annotation.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Annotation/Annotation.js",
        },
        "pathLine": "components/Annotation/Annotation.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Annotation/Annotation.js",
        },
        "slug": "annotation-1",
      },
      {
        "filepath": "components/Button/Button.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Button/Button.js",
        },
        "pathLine": "components/Button/Button.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Button/Button.js",
        },
        "slug": "button-2",
      },
      {
        "filepath": "components/Placeholder/Placeholder.js",
        "hasExamples": true,
        "metadata": {
          "__rsgDefault": true,
          "__rsgImport": "~/test/components/Placeholder/Placeholder.json",
        },
        "module": {
          "__rsgImport": "~/test/components/Placeholder/Placeholder.js",
        },
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Placeholder/Placeholder.js",
        },
        "slug": "placeholder-2",
      },
      {
        "filepath": "components/Price/Price.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Price/Price.js",
        },
        "pathLine": "components/Price/Price.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Price/Price.js",
        },
        "slug": "price-2",
      },
      {
        "filepath": "components/RandomButton/RandomButton.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/RandomButton/RandomButton.js",
        },
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/RandomButton/RandomButton.js",
        },
        "slug": "randombutton-2",
      },
    ],
    "content": undefined,
    "exampleMode": "collapse",
    "href": undefined,
    "name": "Components",
    "sectionDepth": 0,
    "sections": [],
    "slug": "section-components-1",
    "usageMode": "collapse",
  },
  {
    "components": [
      {
        "filepath": "components/Button/Button.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Button/Button.js",
        },
        "pathLine": "components/Button/Button.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Button/Button.js",
        },
        "slug": "button-3",
      },
      {
        "filepath": "components/Label/index.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Label/index.js",
        },
        "pathLine": "components/Label/index.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Label/index.js",
        },
        "slug": "label-1",
      },
      {
        "filepath": "components/Placeholder/Placeholder.js",
        "hasExamples": true,
        "metadata": {
          "__rsgDefault": true,
          "__rsgImport": "~/test/components/Placeholder/Placeholder.json",
        },
        "module": {
          "__rsgImport": "~/test/components/Placeholder/Placeholder.js",
        },
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Placeholder/Placeholder.js",
        },
        "slug": "placeholder-3",
      },
      {
        "filepath": "components/Price/Price.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/Price/Price.js",
        },
        "pathLine": "components/Price/Price.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/Price/Price.js",
        },
        "slug": "price-3",
      },
      {
        "filepath": "components/RandomButton/RandomButton.js",
        "hasExamples": true,
        "metadata": {},
        "module": {
          "__rsgImport": "~/test/components/RandomButton/RandomButton.js",
        },
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": {
          "__rsgDefault": true,
          "__rsgImport": "rsg-props:~/test/components/RandomButton/RandomButton.js",
        },
        "slug": "randombutton-3",
      },
    ],
    "content": undefined,
    "exampleMode": "collapse",
    "href": undefined,
    "ignore": "**/components/Annotation/*",
    "name": "Ignore",
    "sectionDepth": 0,
    "sections": [],
    "slug": "section-ignore-2",
    "usageMode": "collapse",
  },
  {
    "components": [],
    "content": {
      "content": "Hello World",
      "type": "markdown",
    },
    "exampleMode": "collapse",
    "href": undefined,
    "name": "Ignore",
    "sectionDepth": 0,
    "sections": [],
    "slug": "section-ignore-3",
    "usageMode": "collapse",
  },
]
`;

exports[`processSection() should return an object for section with components 1`] = `
{
  "components": [
    {
      "filepath": "components/Annotation/Annotation.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Annotation/Annotation.js",
      },
      "pathLine": "components/Annotation/Annotation.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Annotation/Annotation.js",
      },
      "slug": "annotation",
    },
    {
      "filepath": "components/Button/Button.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Button/Button.js",
      },
      "pathLine": "components/Button/Button.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Button/Button.js",
      },
      "slug": "button",
    },
    {
      "filepath": "components/Placeholder/Placeholder.js",
      "hasExamples": true,
      "metadata": {
        "__rsgDefault": true,
        "__rsgImport": "~/test/components/Placeholder/Placeholder.json",
      },
      "module": {
        "__rsgImport": "~/test/components/Placeholder/Placeholder.js",
      },
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Placeholder/Placeholder.js",
      },
      "slug": "placeholder",
    },
    {
      "filepath": "components/Price/Price.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Price/Price.js",
      },
      "pathLine": "components/Price/Price.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Price/Price.js",
      },
      "slug": "price",
    },
    {
      "filepath": "components/RandomButton/RandomButton.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/RandomButton/RandomButton.js",
      },
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/RandomButton/RandomButton.js",
      },
      "slug": "randombutton",
    },
  ],
  "content": undefined,
  "exampleMode": "collapse",
  "href": undefined,
  "name": "Components",
  "sectionDepth": 0,
  "sections": [],
  "slug": "section-components",
  "usageMode": "collapse",
}
`;

exports[`processSection() should return an object for section with content 1`] = `
{
  "components": [],
  "content": {
    "__rsgDefault": true,
    "__rsgImport": "rsg-examples:~/test/components/Button/Readme.md",
  },
  "exampleMode": "collapse",
  "href": undefined,
  "name": "Readme",
  "sectionDepth": 0,
  "sections": [],
  "slug": "section-readme",
  "usageMode": "collapse",
}
`;

exports[`processSection() should return an object for section with content as function 1`] = `
{
  "components": [],
  "content": {
    "content": "Hello World",
    "type": "markdown",
  },
  "exampleMode": "collapse",
  "href": undefined,
  "name": "Ignore",
  "sectionDepth": 0,
  "sections": [],
  "slug": "section-ignore-1",
  "usageMode": "collapse",
}
`;

exports[`processSection() should return an object for section without ignored components 1`] = `
{
  "components": [
    {
      "filepath": "components/Button/Button.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Button/Button.js",
      },
      "pathLine": "components/Button/Button.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Button/Button.js",
      },
      "slug": "button-1",
    },
    {
      "filepath": "components/Label/index.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Label/index.js",
      },
      "pathLine": "components/Label/index.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Label/index.js",
      },
      "slug": "label",
    },
    {
      "filepath": "components/Placeholder/Placeholder.js",
      "hasExamples": true,
      "metadata": {
        "__rsgDefault": true,
        "__rsgImport": "~/test/components/Placeholder/Placeholder.json",
      },
      "module": {
        "__rsgImport": "~/test/components/Placeholder/Placeholder.js",
      },
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Placeholder/Placeholder.js",
      },
      "slug": "placeholder-1",
    },
    {
      "filepath": "components/Price/Price.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/Price/Price.js",
      },
      "pathLine": "components/Price/Price.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/Price/Price.js",
      },
      "slug": "price-1",
    },
    {
      "filepath": "components/RandomButton/RandomButton.js",
      "hasExamples": true,
      "metadata": {},
      "module": {
        "__rsgImport": "~/test/components/RandomButton/RandomButton.js",
      },
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": {
        "__rsgDefault": true,
        "__rsgImport": "rsg-props:~/test/components/RandomButton/RandomButton.js",
      },
      "slug": "randombutton-1",
    },
  ],
  "content": undefined,
  "exampleMode": "collapse",
  "href": undefined,
  "ignore": "**/components/Annotation/*",
  "name": "Ignore",
  "sectionDepth": 0,
  "sections": [],
  "slug": "section-ignore",
  "usageMode": "collapse",
}
`;
